@@ -1,3 +1,8 @@
+2011-07-06  Matt Rice  <ratmice@gmail.com>
+
+	* gdb.python/python.exp: Update filename paths.
+	* gdb.python/py-symtab.exp: Ditto.
+
 2011-07-06  Marek Polacek  <mpolacek@redhat.com>
 
 	* gdb.python/py-evthreads.exp: Add missing `$'.
